# bevy_interstellar

./: Cargo.toml
assets/shaders/astronomical/: common.wgsl  hires.vert.wgsl  hires_sirius_b.frag.wgsl  hires_sun.frag.wgsl
client/: Cargo.toml
client/src/: lib.rs
client/src/map/: mod.rs
client/src/map/star/: mod.rs  sirius_b.rs  sun.rs  system.rs
client/src/utils/: mod.rs  shaders.rs
examples/: shader_stars.rs
galaxy_map/: Cargo.toml
galaxy_map/src/solar_system/: ecs.rs  id.rs  mod.rs  render.rs
physics/: Cargo.toml
physics/src/render/: raycast.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/fleet/: mod.rs  ship.rs
server/src/galaxy_map/: solar_system.rs
server/src/map/: astronomy.rs  generate.rs  mod.rs  rapier_collider.rs  solar_system.rs  solar_system_old.rs  star.rs
server/src/map/star/: main_seq.rs  mod.rs
server/src/physics/: collision.rs
server/src/utils/: marker.rs  mod.rs  object_id.rs  oid.rs  property.rs  sync.rs
src/: main.rs
