[workspace]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Yongda Fan"]

[workspace.dependencies]
# game engine
bevy = { version = "0.10.0", features = ["serialize", "tonemapping_luts"] }
# physics engine
rapier3d = { version = "0.17.2", features = ["simd-nightly", "parallel"] }
nalgebra = { version = "*", features = ["convert-glam023"] } # bevy use glam 0.2.3
# serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.2", features = ["serde"]}
uuid = { version = "1.3.0", features = ["v1", "v4", "v5"] }
sha1 = { version = "0.10.5" }
# random
rand = { version = "0.8.5", features = ["serde1", "simd_support"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rand_distr = { version = "0.4.3" }
# other
nohash-hasher = { version = "0.2.0" }
fxhash = { version = "0.2.1" }
once_cell = { version = "1.17.1" }
paste = { version = "1.0.11" }

[package]
name = "bevy_interstellar"
description = "A space strategy game developed using Bevy game engine."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
bevy = { workspace = true }
server = { path = "./server" }
client = { path = "./client" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
