[package]
name = "client"
description = "A crate handle user input & graphics."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
bevy = { workspace = true }
rapier3d = { workspace = true }
nalgebra = { workspace = true } # for nalgebra-glam interpolation 

float-ord = "0.3.2"
heapless = "0.7.16"

