[package]
name = "server"
description = "A crate handle all the logical side of the game."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# game engine
bevy = { workspace = true }
# physics engine
rapier3d = { workspace = true }
nalgebra = { workspace = true } # for nalgebra-glam interpolation 
# serialization
serde = { workspace = true } 
bincode = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
# random
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rand_distr = { workspace = true }
# other
fxhash = { workspace = true }
once_cell = { workspace = true}
paste = { workspace = true }
